Pagination and fix design

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -18,18 +18,15 @@
 
 .search {
     width: 130px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    background-color: white;
     background-position: 10px 10px;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
     height: 39px;
     transition: width 0.4s ease-in-out;
-    box-shadow: 0 0 20px rgb(0 0 0 / 15%);
     text-align: "center";
+    padding-bottom: 5px;
 }
 
 .table-design {
@@ -86,8 +83,23 @@ th{
     color:red;
 }
 .product-desc{
-    font-size: 22px; 
+    font-size: 20px; 
     font-family: "Lucida Console";
+    background-color: rgb(242, 242, 242);
+    padding-top: 15px;
+    padding-bottom: 1px;
+    padding-left: 10px;
+    color:black;
+    border-radius: 13px;
+    font-weight: normal;
+    line-height: 10px;
+}
+.price-info{
+    font-size: 20px; 
+    font-family: "Lucida Console";
+    padding-top: 15px;
+    padding-bottom: 1px;
+    padding-left: 10px;
 }
 .input-title{
     font-size: 18px;
@@ -170,4 +182,88 @@ color: white;
 .to-margin{
     margin-top:20px;
 }
+
+
+
+.App {
+    font-family: sans-serif;
+    position: relative;
+    width: 80vw;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30px;
+    color: #14877c;
+  }
+  .heading {
+    color: #14877c;
+    border-bottom: 1px solid #14877c;
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+  }
+  input {
+    width: 40%;
+    min-width: 200px;
+    border-radius: 10px;
+    border: 2px solid #14877c;
+    padding: 10px;
+    font-size: 14px;
+  }
+  button {
+    height: 40px;
+    border-radius: 4px;
+    margin-top: 10px;
+    font-size: 15px;
+    display: inline-block;
+    text-align: center;
+    user-select: none;
+    font-weight: 600;
+    border-radius: 4px;
+    color: #ffffff;
+    border: 1px solid #14877c;
+    background-color: #14877c;
+    cursor: pointer;
+    margin: 0px 15px;
+    min-width: 100px;
+  }
+  
+  button:hover {
+    background: #14877c;
+    color: #ffffff;
+  }
+  
+  table {
+    width: 100%;
+    padding: 1em;
+    margin: 20px 0;
+    border-collapse: collapse;
+    box-shadow: 0 1px 2px 0 #c6e8c9;
+  }
+  
+  thead {
+    background-color: #caf0ec;
+    font-size: 16px;
+  }
+  
+  th {
+    text-align: left;
+    padding: 8px;
+    background-color: 1px solid #ffffff;
+    color: #14877c;
+  }
+  td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr {
+    height: 50px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #e0e0e0;
+  }
+  .table-header{
+    background-color: red!important;
+  }
+  
 
