--- a/src/asset/css/style.css
+++ b/src/asset/css/style.css
@@ -130,7 +130,7 @@ th{
 .estimated-price{
     border:none;
     font-size: 22px;
-    font-family: "Lucida Handwriting"; 
+    font-family: "Lucida Console"; 
     background-color: white; 
     font-weight: bold;
     margin-bottom: 10px;
