--- a/src/asset/css/style.css
+++ b/src/asset/css/style.css
@@ -58,7 +58,7 @@ th{
 .search{
     height:40;
 }
-.BookReturn{
+.book-return{
     margin-right: 21px;
     display: flex;
     justify-content: flex-end;
